# DLMiFish

./: .gitignore  CHANGELOG.md  DLMiFish.py  LICENSE  README.md  requirements.txt  setting.txt  taxondb_bold.py  taxondbbuilder.py  taxondbbuilder.spec
.github/workflows/: tauri-build.yml
ID/: StockID.txt
configs/: db.toml  markers_mitogenome.toml  primers.toml
docs/: bold-integration-todo.md  primer-trim-enhancement-spec.md  taxonomy-db-build.md
scripts/: script1.py  script2.py  script3.py  script4.py
tauri-gui/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
tauri-gui/docs/: log-parser-spec.md  sidecar-bundle-spec.md
tauri-gui/resources/templates/: markers_mitogenome.toml
tauri-gui/scripts/: build_sidecar.py
tauri-gui/src/: main.js  styles.css
tauri-gui/src-tauri/: Cargo.toml  tauri.conf.json
tauri-gui/src-tauri/capabilities/: default.json
tauri-gui/src-tauri/src/: main.rs  taxondb_post_prep.rs  taxondb_runner.rs
tauri-gui/src/lib/: form-utils.js  monitor-view.js  token-list.js
tools/: build_taxonomy_db.py
web/: app.js  index.html  styles.css  worker.js
