[package]
name = "taxondbbuilder-gui"
version = "0.1.0"
description = "TaxonDBBuilder GUI (Tauri)"
authors = ["TaxonDBBuilder contributors"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["clock", "serde"] }
dirs = "6"
once_cell = "1"
open = "5"
regex = "1"
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
toml = "0.8"
which = "8"
